--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
     "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.5.0",
