--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.11.3"
