add http-server and configurations for starting the PWA; add and test the caching of GET users; update README file

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -26,5 +26,17 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "all-users",
+      "urls": ["http://localhost:8080/api/v1/users"],
+      "cacheConfig": {
+        "strategy": "performance",
+        "maxSize": 100,
+        "maxAge": "3d",
+        "timeout": "10s"
+      }
+    }
   ]
 }
